--- a/fg.css
+++ b/fg.css
@@ -44,7 +44,7 @@ img{
     bottom: 0;
     position: fixed;
 }
-#text{
+div#text{
     width:100%;
     height: 10%;
     top: 0;
@@ -52,6 +52,10 @@ img{
     text-align: center;
     background-color: rgba(255,255,255,0.2);
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size:100px;
 }
 
 
